--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ notifications:
     on_success: never
     on_failure: always
 script:
-  - bin/rubocop $(git ls-tree -r HEAD --name-only) --force-exclusion --format clang
+  - bin/rubocop --format clang
