--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -15,6 +15,8 @@ jobs:
         bundler-cache: true
     - name: Run Rubocop
       run: bin/rubocop --format clang
+    - name: Run RSpec tests
+      run: bin/rspec --format progress
     - name: Ensure alpha version
       run: grep alpha $(find . -type f -name version.rb)
     - name: Ensure no git diff
