--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Run Rubocop
       run: bin/rubocop --format clang
     - name: Run RSpec tests
-      run: bin/rspec --format progress
+      run: bin/rspec --format progress --force-color
     - name: Ensure alpha version
       run: grep alpha $(find . -type f -name version.rb)
     - name: Ensure no git diff
